--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flow-bin": "^0.89.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
@@ -19,7 +20,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "analyze": "webpack-bundle-analyzer build/bundle-stats.json"
+    "analyze": "webpack-bundle-analyzer build/bundle-stats.json",
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": "react-app"
