--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,13 @@ deploy:
     name: $NAME
     on:
       branch: master
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    bucket: gre-dev.abhishek.pro.np
-    region: $AWS_REGION
-    skip_cleanup: true
-    upload-dir: goodreads-explorer
-    local_dir: build
+  - provider: pages
+    target-branch: gh-pages-dev
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    keep-history: true
+    local-dir: build
+    email: $EMAIL
+    name: $NAME 
     on:
       branch: develop
