--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://rpidanny.github.io/goodreads-explorer",
+  "homepage": "https://gre-dev.abhishek.pro.np",
   "devDependencies": {
     "standard": "^12.0.1"
   }
