--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.12.1",
+    "d3-force": "^2.0.0",
+    "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-zoom": "^1.7.3",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
@@ -22,7 +26,7 @@
     "build-js": "react-scripts build",
     "build-js-stats": "react-scripts build -- --stats",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "analyze": "webpack-bundle-analyzer build/bundle-stats.json"
   },
@@ -37,6 +41,7 @@
   ],
   "homepage": "https://gre-dev.abhishek.pro.np",
   "devDependencies": {
+    "jest-canvas-mock": "^1.1.0",
     "standard": "^12.0.1"
   }
 }
