--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-lazyload": "^2.3.0",
+    "react-photo-gallery": "^6.3.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
