--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
     "d3-zoom": "^1.7.3",
+    "lodash.uniqby": "^4.7.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
