--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "homepage": "https://gre-dev.abhishek.pro.np",
   "devDependencies": {
     "jest-canvas-mock": "^1.1.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
