--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
     "react-lazyload": "^2.3.0",
     "react-photo-gallery": "^6.3.0",
     "react-redux": "^6.0.0",
