Add Histogram of published books

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.52.0",
     "antd": "^3.12.1",
     "d3-force": "^2.0.0",
     "d3-scale": "^2.1.2",
