--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "memoize-one": "^5.0.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
+    "randomcolor": "^0.5.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
@@ -21,6 +22,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-tag-cloud": "^1.3.2",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
