--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-tag-cloud": "^1.3.2",
+    "react-tagcloud": "^1.4.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
