--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build-js-stats": "react-scripts build -- --stats",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-css build-js && cp build/index.html build/404.html",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "analyze": "webpack-bundle-analyzer build/bundle-stats.json"
